--- a/.github/workflows/deploy-vervestacks.yml
+++ b/.github/workflows/deploy-vervestacks.yml
@@ -11,8 +11,11 @@ env:
   Update_Data_On_Hetzner: "false"
 
   # Deployment roots
-  DEPLOY_ROOT: "C:\\inetpub\\VerveStacks"        # now repo root, not just dashboard
+  DEPLOY_ROOT: "C:\\inetpub\\VerveStacks"
   DATA_ROOT: "C:\\inetpub\\VerveStacks\\data"
+
+  # Local data source root (your main local data source)
+  LOCAL_DATA_SOURCE_ROOT: "D:\\GitHub\\VerveStacks\\data"
 
   # Source UNC paths (kanvault)
   SOURCE_OSM_HARISH: "\\\\192.168.0.7\\kanvault\\KanORS_Data\\VerveStacks\\OSM-kan-prebuilt\\harish"
@@ -31,7 +34,7 @@ env:
   FRONTEND_DIR: "vervestacks-dashboard/frontend"
   PYTHON_DIR: "vervestacks-dashboard/python-service"
 
-  # Python executable
+  # Python executable on the runner
   PYTHON_EXE: "D:\\Pyvenvs\\Scripts\\python.exe"
 
 jobs:
@@ -46,7 +49,7 @@ jobs:
         uses: actions/checkout@v4
 
       # =====================
-      # MAP UNC SHARE
+      # MAP UNC SHARE (kanvault)
       # =====================
       - name: Map kanvault share
         if: env.Update_Data_On_Local == 'true'
@@ -64,9 +67,7 @@ jobs:
           }
 
           $global:LASTEXITCODE = 0
-
           net use \\192.168.0.7\kanvault /user:amit $env:KANVAULT_PASSWORD
-
           $exitCode = $LASTEXITCODE
           if ($exitCode -ne 0) {
             Write-Error "Failed to map \\192.168.0.7\kanvault. Exit code: $exitCode"
@@ -75,10 +76,9 @@ jobs:
 
           Write-Host "UNC network share mapped successfully."
 
-      # =========================================
-      # SYNC KANVAULT DATA → C:\inetpub\VerveStacks\data
-      # (overwrite-only, no deletions)
-      # =========================================
+      # -------------------------------------------------
+      # 1) SYNC 4 FOLDERS FROM KANVAULT → IIS DATA (overwrite only)
+      # -------------------------------------------------
       - name: Sync kanvault data to local data folders
         if: env.Update_Data_On_Local == 'true'
         shell: powershell
@@ -101,27 +101,23 @@ jobs:
             }
           }
 
-          # 1) OSM-kan-prebuilt\harish  ->  DEST_OSM
           Write-Host "Syncing OSM-kan-prebuilt/harish → DEST_OSM"
-          robocopy $env:SOURCE_OSM_HARISH $env:DEST_OSM /E /NFL /NDL /NJH /NJS /NP
+          robocopy $env:SOURCE_OSM_HARISH $env:DEST_OSM /E /XD ".git" /XF ".gitignore" ".gitattributes" ".gitmodules" /NFL /NDL /NJH /NJS /NP
           $rc1 = $LASTEXITCODE
           Write-Host "harish robocopy exit code: $rc1"
 
-          # 2) transmission_line_generation  ->  DEST_TRANSMISSION
           Write-Host "Syncing transmission_line_generation → DEST_TRANSMISSION"
-          robocopy $env:SOURCE_TRANSMISSION $env:DEST_TRANSMISSION /E /NFL /NDL /NJH /NJS /NP
+          robocopy $env:SOURCE_TRANSMISSION $env:DEST_TRANSMISSION /E /XD ".git" /XF ".gitignore" ".gitattributes" ".gitmodules" /NFL /NDL /NJH /NJS /NP
           $rc2 = $LASTEXITCODE
           Write-Host "transmission_line_generation robocopy exit code: $rc2"
 
-          # 3) Atlite_data_optimized  ->  DEST_ATLITE
           Write-Host "Syncing Atlite_data_optimized → DEST_ATLITE"
-          robocopy $env:SOURCE_ATLITE $env:DEST_ATLITE /E /NFL /NDL /NJH /NJS /NP
+          robocopy $env:SOURCE_ATLITE $env:DEST_ATLITE /E /XD ".git" /XF ".gitignore" ".gitattributes" ".gitmodules" /NFL /NDL /NJH /NJS /NP
           $rc3 = $LASTEXITCODE
           Write-Host "Atlite_data_optimized robocopy exit code: $rc3"
 
-          # 4) REZoning_world_data  ->  DEST_REZONING
           Write-Host "Syncing REZoning_world_data → DEST_REZONING"
-          robocopy $env:SOURCE_REZONING_WORLD $env:DEST_REZONING /E /NFL /NDL /NJH /NJS /NP
+          robocopy $env:SOURCE_REZONING_WORLD $env:DEST_REZONING /E /XD ".git" /XF ".gitignore" ".gitattributes" ".gitmodules" /NFL /NDL /NJH /NJS /NP
           $rc4 = $LASTEXITCODE
           Write-Host "REZoning_world_data robocopy exit code: $rc4"
 
@@ -133,7 +129,45 @@ jobs:
             exit $maxCode
           }
 
-          Write-Host "Data sync completed successfully with robocopy max code: $maxCode"
+          Write-Host "UNC data sync completed successfully with robocopy max code: $maxCode"
+          exit 0
+
+      # -------------------------------------------------
+      # 2) SYNC LOCAL VerveStacks\data → IIS data (all remaining folders)
+      # -------------------------------------------------
+      - name: Sync local VerveStacks data root to IIS data
+        if: env.Update_Data_On_Local == 'true'
+        shell: powershell
+        run: |
+          Write-Host "=== Syncing LOCAL data from D:\GitHub\VerveStacks\data → C:\inetpub\VerveStacks\data ==="
+          $src = $env:LOCAL_DATA_SOURCE_ROOT
+          $dst = $env:DATA_ROOT
+
+          Write-Host "Local data source     : $src"
+          Write-Host "IIS data destination  : $dst"
+
+          if (-not (Test-Path $src)) {
+            Write-Host "WARNING: Local data source folder does not exist: $src"
+            Write-Host "Nothing to sync from local; continuing."
+            exit 0
+          }
+
+          if (-not (Test-Path $dst)) {
+            Write-Host "Creating IIS data root: $dst"
+            [System.IO.Directory]::CreateDirectory($dst) | Out-Null
+          }
+
+          # /E: copy all subdirs and files (no deletions), exclude any .git stuff
+          robocopy $src $dst /E /Z /R:3 /W:5 /XD ".git" /XF ".gitignore" ".gitattributes" ".gitmodules" /NFL /NDL /NJH /NJS /NP
+          $code = $LASTEXITCODE
+          Write-Host "Local data robocopy exit code: $code"
+
+          if ($code -ge 8) {
+            Write-Error "Local data sync failed with robocopy exit code $code"
+            exit $code
+          }
+
+          Write-Host "Local data sync completed successfully."
           exit 0
 
       # =========================================
@@ -192,10 +226,10 @@ jobs:
           npm run build:prod
 
       # ==========================================================
-      # DEPLOY ENTIRE REPO (VerveStacks) → C:\inetpub\VerveStacks
+      # 3) DEPLOY ENTIRE REPO (VerveStacks) → C:\inetpub\VerveStacks
       # Overwrite changed files, keep extra files, exclude .git
       # ==========================================================
-      - name: Deploy entire VerveStacks to IIS (overwrite only)
+      - name: Deploy entire VerveStacks to IIS (overwrite only, no .git)
         if: env.Update_Data_On_Local == 'true'
         shell: powershell
         run: |
@@ -217,10 +251,10 @@ jobs:
             New-Item -ItemType Directory -Path $dst -Force | Out-Null
           }
 
-          Write-Host "Copying full directory tree (excluding .git)..."
-          robocopy $src $dst /E /Z /R:3 /W:5 /XD ".git" /NFL /NDL /NJH /NJS /NP
+          Write-Host "Copying full directory tree (excluding any .git files/folders)..."
+          robocopy $src $dst /E /Z /R:3 /W:5 /XD ".git" /XF ".gitignore" ".gitattributes" ".gitmodules" /NFL /NDL /NJH /NJS /NP
           $code = $LASTEXITCODE
-          Write-Host "Robocopy exit code: $code"
+          Write-Host "App robocopy exit code: $code"
 
           if ($code -ge 8) {
             Write-Error "Deployment failed with robocopy exit code $code"
