--- a/.github/workflows/deploy-vervestacks.yml
+++ b/.github/workflows/deploy-vervestacks.yml
@@ -102,22 +102,22 @@ jobs:
           }
 
           Write-Host "Syncing OSM-kan-prebuilt/harish → DEST_OSM"
-          robocopy $env:SOURCE_OSM_HARISH $env:DEST_OSM /E /XD ".git" ".github" /XF ".gitignore" ".gitattributes" ".gitmodules" /NFL /NDL /NJH /NJS /NP
+          robocopy $env:SOURCE_OSM_HARISH $env:DEST_OSM /E /XD ".git" ".github" /NFL /NDL /NJH /NJS /NP
           $rc1 = $LASTEXITCODE
           Write-Host "harish robocopy exit code: $rc1"
 
           Write-Host "Syncing transmission_line_generation → DEST_TRANSMISSION"
-          robocopy $env:SOURCE_TRANSMISSION $env:DEST_TRANSMISSION /E /XD ".git" ".github" /XF ".gitignore" ".gitattributes" ".gitmodules" /NFL /NDL /NJH /NJS /NP
+          robocopy $env:SOURCE_TRANSMISSION $env:DEST_TRANSMISSION /E /XD ".git" ".github" /NFL /NDL /NJH /NJS /NP
           $rc2 = $LASTEXITCODE
           Write-Host "transmission_line_generation robocopy exit code: $rc2"
 
           Write-Host "Syncing Atlite_data_optimized → DEST_ATLITE"
-          robocopy $env:SOURCE_ATLITE $env:DEST_ATLITE /E /XD ".git" ".github" /XF ".gitignore" ".gitattributes" ".gitmodules" /NFL /NDL /NJH /NJS /NP
+          robocopy $env:SOURCE_ATLITE $env:DEST_ATLITE /E /XD ".git" ".github" /NFL /NDL /NJH /NJS /NP
           $rc3 = $LASTEXITCODE
           Write-Host "Atlite_data_optimized robocopy exit code: $rc3"
 
           Write-Host "Syncing REZoning_world_data → DEST_REZONING"
-          robocopy $env:SOURCE_REZONING_WORLD $env:DEST_REZONING /E /XD ".git" ".github" /XF ".gitignore" ".gitattributes" ".gitmodules" /NFL /NDL /NJH /NJS /NP
+          robocopy $env:SOURCE_REZONING_WORLD $env:DEST_REZONING /E /XD ".git" ".github" /NFL /NDL /NJH /NJS /NP
           $rc4 = $LASTEXITCODE
           Write-Host "REZoning_world_data robocopy exit code: $rc4"
 
@@ -157,8 +157,8 @@ jobs:
             [System.IO.Directory]::CreateDirectory($dst) | Out-Null
           }
 
-          # /E: copy all subdirs and files (no deletions), exclude any .git/.github stuff
-          robocopy $src $dst /E /Z /R:3 /W:5 /XD ".git" ".github" /XF ".gitignore" ".gitattributes" ".gitmodules" /NFL /NDL /NJH /NJS /NP
+          # /E: copy all subdirs and files (no deletions), exclude .git/.github dirs
+          robocopy $src $dst /E /Z /R:3 /W:5 /XD ".git" ".github" /NFL /NDL /NJH /NJS /NP
           $code = $LASTEXITCODE
           Write-Host "Local data robocopy exit code: $code"
 
@@ -227,7 +227,7 @@ jobs:
 
       # ==========================================================
       # 3) DEPLOY ENTIRE REPO (VerveStacks) → C:\inetpub\VerveStacks
-      # Overwrite changed files, keep extra files, exclude git stuff
+      # Overwrite changed files, keep extra files, exclude git dirs
       # ==========================================================
       - name: Deploy entire VerveStacks to IIS (overwrite only, no git folders)
         if: env.Update_Data_On_Local == 'true'
@@ -251,8 +251,8 @@ jobs:
             New-Item -ItemType Directory -Path $dst -Force | Out-Null
           }
 
-          Write-Host "Copying full directory tree (excluding any .git/.github files/folders)..."
-          robocopy $src $dst /E /Z /R:3 /W:5 /XD ".git" ".github" /XF ".gitignore" ".gitattributes" ".gitmodules" /NFL /NDL /NJH /NJS /NP
+          Write-Host "Copying full directory tree (excluding .git/.github folders)..."
+          robocopy $src $dst /E /Z /R:3 /W:5 /XD ".git" ".github" /NFL /NDL /NJH /NJS /NP
           $code = $LASTEXITCODE
           Write-Host "App robocopy exit code: $code"
 
@@ -275,14 +275,16 @@ jobs:
           Write-Host "Hetzner deployment not implemented yet."
 
       # =========================================
-      # RUN start.bat AT THE END
+      # RUN start.bat AT THE END (FROM DEPLOY_ROOT)
       # =========================================
       - name: Run start.bat after deployment
         if: env.Update_Data_On_Local == 'true'
         shell: powershell
         run: |
-          Write-Host "=== Running start.bat AFTER deployment ==="
-          $scriptPath = "D:\GitHub\VerveStacks\vervestacks-dashboard\start.bat"
+          Write-Host "=== Running start.bat AFTER deployment (from DEPLOY_ROOT) ==="
+          $scriptPath = Join-Path $env:DEPLOY_ROOT "vervestacks-dashboard\start.bat"
+          Write-Host "Expected start.bat path: $scriptPath"
+
           if (-not (Test-Path $scriptPath)) {
             Write-Error "start.bat not found at $scriptPath"
             exit 1
